--- a/frontend/index.html
+++ b/frontend/index.html
@@ -291,7 +291,7 @@
           <span class="tag tag-unlimited" data-i18n="tagUnlimited">Unlimited Runs</span>
           <span class="tag tag-no-login" data-i18n="tagNoLogin">No Sign-up</span>
           <span class="tag tag-quality" data-i18n="tagHighQuality">Pro Quality</span>
-          <span class="tag tag-chinese" data-i18n="tagChinese">中文支持</span>
+          <span class="tag tag-chinese" data-i18n="tagChinese">Chinese Support</span>
         </div>
 
         <!-- CTA按钮区域 -->
@@ -591,17 +591,17 @@
           </div>
         </section>
 
-        <!-- 操作流程：与 HowTo 结构化数据对应 -->
+        <!-- Workflow section aligned with structured data -->
         <section class="how-it-works" style="margin: 60px 0">
           <div class="section-header" style="text-align: center; margin-bottom: 32px">
             <h2 style="font-size: 2em" id="workflow" data-i18n="homeWorkflowTitle">
-              如何高效完成一次创作
+              Workflow to Produce Assets Consistently
             </h2>
             <p
               style="max-width: 640px; margin: 12px auto 0; color: var(--color-surface-on-light-muted, #666); line-height: 1.7"
               data-i18n="homeWorkflowIntro"
             >
-              结合内部团队的最佳实践，我们将常见的 AI 视觉任务拆分成 4 个关键步骤。按照顺序执行可以显著提高命中率，并减少反复试错的时间。
+              Based on our internal best practices, these four steps help teams ship reliable AI visuals while reducing guesswork and revision cycles.
             </p>
           </div>
 
@@ -1800,21 +1800,21 @@
           </div>
           <div class="footer-right">
             <div class="footer-links">
-              <a href="privacy.html" data-i18n="privacyPolicy">隐私政策</a>
-              <a href="terms.html" data-i18n="termsOfService">服务条款</a>
-              <a href="contact.html" data-i18n="contactUs">联系我们</a>
+              <a href="privacy.html" data-i18n="privacyPolicy">Privacy Policy</a>
+              <a href="terms.html" data-i18n="termsOfService">Terms of Service</a>
+              <a href="contact.html" data-i18n="contactUs">Contact Us</a>
             </div>
           </div>
         </div>
       </footer>
     </div>
 
-    <!-- 登录模态框 -->
+    <!-- Login modal -->
     <div id="login-modal" class="modal" style="display: none">
       <div class="modal-content">
-        <span class="close" onclick="closeModal('login-modal')">&times;</span>
-        <h2 data-i18n="loginTitle">登录</h2>
-        <p data-i18n="loginOptional">登录是可选的，所有功能无需注册即可使用</p>
+            <span class="close" onclick="closeModal('login-modal')" aria-label="Close">&times;</span>
+        <h2 data-i18n="loginTitle">Log In</h2>
+        <p data-i18n="loginOptional">Logging in is optional—every feature works without registration</p>
         <div class="auth-buttons">
           <button class="auth-btn google-btn" data-i18n="loginWithGoogle">
             <img
@@ -1823,13 +1823,13 @@
               width="20"
               height="20"
             />
-            使用 Google 登录
+            Continue with Google
           </button>
         </div>
       </div>
     </div>
 
-    <!-- JavaScript文件 -->
+    <!-- JavaScript files -->
     <script src="js/i18n.js?v=20250924"></script>
     <script src="js/api_client.js?v=20250924" defer></script>
     <script src="js/modules/ui_utils.js?v=20250924" defer></script>
@@ -1841,10 +1841,9 @@
     <script src="js/auth.js?v=20250924" defer></script>
     <script src="js/cookie_consent.js?v=20250924" defer></script>
 
-    <!-- 页面初始化 -->
+    <!-- Page initialization -->
     <script>
       document.addEventListener("DOMContentLoaded", async function () {
-        // 等待所有模块加载完成
         setTimeout(async () => {
           // 初始化认证状态
           if (window.authManager) {
