chore: align seo pages and clean lint warnings

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -231,6 +231,7 @@
         <li><a href="/" data-i18n="navHome">首页</a></li>
         <li><a href="image-generator.html" data-i18n="navImageGen">图像生成</a></li>
         <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
+        <li><a href="services.html" data-i18n="navServices">我们的服务</a></li>
         <li><a href="blog.html" data-i18n="navBlog">博客</a></li>
         <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
         <li><a href="contact.html" data-i18n="navContact">联系我们</a></li>
