--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -65,6 +65,7 @@
       </div>
       <ul class="navbar-menu">
         <li><a href="/" data-i18n="navHome">首页</a></li>
+        <li><a href="services.html" data-i18n="navServices">我们的服务</a></li>
         <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
         <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
         <li><a href="ai-guide.html" class="active" data-i18n="navAIGuide">AI指南</a></li>
