--- a/frontend/blog_faq.html
+++ b/frontend/blog_faq.html
@@ -39,6 +39,7 @@
           <a href="image-generator.html" class="navbar-link" data-i18n="navImageGen">图像生成</a>
         </li>
         <li><a href="voice.html" class="navbar-link" data-i18n="navVoice">语音合成</a></li>
+        <li><a href="services.html" class="navbar-link" data-i18n="navServices">服务</a></li>
         <li><a href="blog.html" class="navbar-link active" data-i18n="navBlog">博客</a></li>
         <li><a href="about.html" class="navbar-link" data-i18n="navAbout">关于</a></li>
         <li><a href="contact.html" class="navbar-link" data-i18n="navContact">联系</a></li>
