--- a/frontend/blog_tutorial.html
+++ b/frontend/blog_tutorial.html
@@ -38,6 +38,7 @@
           <a href="image-generator.html" class="navbar-link" data-i18n="navImageGen">Image</a>
         </li>
         <li><a href="voice.html" class="navbar-link" data-i18n="navVoice">Voice</a></li>
+        <li><a href="services.html" class="navbar-link" data-i18n="navServices">Services</a></li>
         <li><a href="blog.html" class="navbar-link active" data-i18n="navBlog">Blog</a></li>
         <li><a href="about.html" class="navbar-link" data-i18n="navAbout">About</a></li>
         <li><a href="contact.html" class="navbar-link" data-i18n="navContact">Contact</a></li>
