--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -107,15 +107,12 @@
               /></svg
           ></a>
         </div>
-        <div class="footer-right">
-          <a href="#" class="footer-link" data-i18n="footerLinks.0.text">隐私政策</a><br />
-          <a href="#" class="footer-link" data-i18n="footerLinks.1.text">服务条款</a><br />
-        </div>
+        <div class="footer-right"></div>
       </div>
     </footer>
-    <script src="js/i18n.js?v=20250924"></script>
-    <script src="js/ui_handler.js" defer></script>
-    <script src="js/auth_modals.js" defer></script>
+    <script src="js/i18n.js?v=20251106"></script>
+    <script src="js/ui_handler.js?v=20251106" defer></script>
+    <script src="js/auth_modals.js?v=20251106" defer></script>
     <div id="auth-modals"></div>
     <script>
       fetch("auth-modals.html")
