--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -481,31 +481,28 @@
                 /></svg
             ></a>
           </div>
-          <div class="footer-right">
-            <a href="privacy.html" class="footer-link" data-i18n="privacyPolicy">隐私政策</a><br />
-            <a href="terms.html" class="footer-link" data-i18n="termsOfService">服务条款</a><br />
-          </div>
+          <div class="footer-right"></div>
         </div>
       </footer>
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
-    <script src="js/i18n.js?v=20250924"></script>
-    <script src="js/api_client.js?v=20250924" defer></script>
-    <script src="js/modules/ui_utils.js?v=20250924" defer></script>
-    <script src="js/modules/image_display.js?v=20250924" defer></script>
-    <script src="js/ui_handler.js?v=20250924" defer></script>
-    <script src="js/ui_enhancements.js?v=20250924" defer></script>
-    <script src="js/prompt_templates.js?v=20250924" defer></script>
-    <script src="js/app.js?v=20250924" defer></script>
+    <script src="js/i18n.js?v=20251106"></script>
+    <script src="js/api_client.js?v=20251106" defer></script>
+    <script src="js/modules/ui_utils.js?v=20251106" defer></script>
+    <script src="js/modules/image_display.js?v=20251106" defer></script>
+    <script src="js/ui_handler.js?v=20251106" defer></script>
+    <script src="js/ui_enhancements.js?v=20251106" defer></script>
+    <script src="js/prompt_templates.js?v=20251106" defer></script>
+    <script src="js/app.js?v=20251106" defer></script>
     <!-- 认证模态交互脚本 -->
-    <script src="js/auth_modals.js?v=20250924" defer></script>
+    <script src="js/auth_modals.js?v=20251106" defer></script>
 
     <!-- V2.0 认证和图片管理模块 -->
-    <script src="js/auth.js?v=20250924" defer></script>
-    <script src="js/hd_image_manager.js?v=20250924" defer></script>
-    <script src="js/header.js?v=20250924" defer></script>
-    <script src="js/cookie_consent.js?v=20250924" defer></script>
+    <script src="js/auth.js?v=20251106" defer></script>
+    <script src="js/hd_image_manager.js?v=20251106" defer></script>
+    <script src="js/header.js?v=20251106" defer></script>
+    <script src="js/cookie_consent.js?v=20251106" defer></script>
 
     <!-- 认证界面 -->
     <div id="auth-modals"></div>
