--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -250,6 +250,13 @@
           <a href="privacy.html" data-i18n="privacyPolicy">隐私政策</a>
           <a href="terms.html" data-i18n="termsOfService">使用条款</a>
           <a href="contact.html" data-i18n="contactUs">联系我们</a>
+          <a
+            href="https://idphoto.space/"
+            target="_blank"
+            rel="noopener noreferrer"
+            data-i18n="footerLinks.2.text"
+            >友情链接：IDPhoto.space（在线证件照工具）</a
+          >
         </div>
       </div>
     </footer>
@@ -330,6 +337,6 @@
     </style>
 
     <!-- 启用多语言渲染 -->
-    <script src="js/i18n.js?v=20250924"></script>
+    <script src="js/i18n.js?v=20251106"></script>
   </body>
 </html>
