--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -561,16 +561,13 @@
                 /></svg
             ></a>
           </div>
-          <div class="footer-right">
-            <a href="privacy.html" class="footer-link">隐私政策</a><br />
-            <a href="terms.html" class="footer-link">服务条款</a><br />
-          </div>
+          <div class="footer-right"></div>
         </div>
       </footer>
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
-    <script src="js/i18n.js?v=20250925b"></script>
+    <script src="js/i18n.js?v=20251106"></script>
     <script src="js/api_client.js?v=20250909"></script>
     <!-- 语音页面不依赖首页 UI 逻辑，避免阻塞语音功能 -->
     <script src="js/mobile-interactions.js?v=20250909" defer></script>
@@ -591,8 +588,9 @@
     <script src="js/modules/voice_share.js?v=20250909" defer></script>
     <script src="js/modules/voice_history.js?v=20250909" defer></script>
     <script src="js/voice_app.js?v=20250924" defer></script>
-    <script src="js/header.js?v=20250924" defer></script>
-    <script src="js/cookie_consent.js?v=20250924" defer></script>
+    <script src="js/ui_handler.js?v=20251106" defer></script>
+    <script src="js/header.js?v=20251106" defer></script>
+    <script src="js/cookie_consent.js?v=20251106" defer></script>
 
     <!-- 认证模态交互脚本 -->
     <script src="js/auth_modals.js?v=20250909" defer></script>
