--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -567,8 +567,8 @@
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
-    <script src="js/i18n.js?v=20251106"></script>
-    <script src="js/api_client.js?v=20250909"></script>
+    <script src="js/i18n.js?v=20251108"></script>
+    <script src="js/api_client.js?v=20250909" defer></script>
     <!-- 语音页面不依赖首页 UI 逻辑，避免阻塞语音功能 -->
     <script src="js/mobile-interactions.js?v=20250909" defer></script>
     <!-- 语音模块常量（需在 voice_app.js 之前加载） -->
@@ -588,9 +588,9 @@
     <script src="js/modules/voice_share.js?v=20250909" defer></script>
     <script src="js/modules/voice_history.js?v=20250909" defer></script>
     <script src="js/voice_app.js?v=20250924" defer></script>
-    <script src="js/ui_handler.js?v=20251106" defer></script>
-    <script src="js/header.js?v=20251106" defer></script>
-    <script src="js/cookie_consent.js?v=20251106" defer></script>
+    <script src="js/ui_handler.js?v=20251108" defer></script>
+    <script src="js/header.js?v=20251108" defer></script>
+    <script src="js/cookie_consent.js?v=20251108" defer></script>
 
     <!-- 认证模态交互脚本 -->
     <script src="js/auth_modals.js?v=20250909" defer></script>
