--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1816,35 +1816,49 @@
         <h2 data-i18n="loginTitle">Log In</h2>
         <p data-i18n="loginOptional">Logging in is optional—every feature works without registration</p>
         <div class="auth-buttons">
-          <button class="auth-btn google-btn" data-i18n="loginWithGoogle">
+          <button id="googleLoginBtn" class="auth-btn google-btn" data-i18n="loginWithGoogle">
             <img
               src="https://developers.google.com/identity/images/g-logo.png"
               alt="Google"
               width="20"
               height="20"
             />
-            Continue with Google
+            <span>Continue with Google</span>
           </button>
         </div>
       </div>
     </div>
 
     <!-- JavaScript files -->
-    <script src="js/i18n.js?v=20251108"></script>
-    <script src="js/api_client.js?v=20251108" defer></script>
-    <script src="js/modules/ui_utils.js?v=20251108" defer></script>
-    <script src="js/ui_handler.js?v=20251108" defer></script>
-    <script src="js/ui_enhancements.js?v=20251108" defer></script>
-    <script src="js/app.js?v=20251108" defer></script>
-    <script src="js/header.js?v=20251108" defer></script>
-    <script src="js/auth_modals.js?v=20251108" defer></script>
-    <script src="js/auth.js?v=20251108" defer></script>
-    <script src="js/cookie_consent.js?v=20251108" defer></script>
+    <script src="js/i18n.js?v=20251110"></script>
+    <script src="js/api_client.js?v=20251110" defer></script>
+    <script src="js/modules/ui_utils.js?v=20251110" defer></script>
+    <script src="js/ui_handler.js?v=20251110" defer></script>
+    <script src="js/ui_enhancements.js?v=20251110" defer></script>
+    <script src="js/app.js?v=20251110" defer></script>
+    <script src="js/header.js?v=20251110" defer></script>
+    <script src="js/auth_modals.js?v=20251110" defer></script>
+    <script src="js/auth.js?v=20251110" defer></script>
+    <script src="js/cookie_consent.js?v=20251110" defer></script>
 
     <!-- Page initialization -->
     <script>
       document.addEventListener("DOMContentLoaded", async function () {
         setTimeout(async () => {
+          // 初始化认证表单（包括Google登录按钮）
+          if (window.initAuthForms) {
+            window.initAuthForms();
+            console.log("认证表单初始化完成");
+          } else {
+            console.error("initAuthForms未加载，延迟重试...");
+            setTimeout(() => {
+              if (window.initAuthForms) {
+                window.initAuthForms();
+                console.log("认证表单初始化完成（延迟）");
+              }
+            }, 500);
+          }
+
           // 初始化认证状态
           if (window.authManager) {
             await window.authManager.init();
