修复从中文切换回英文时内容不更新的问题
根本原因：HTML中存在大量硬编码的英文内容，这些内容在data-i18n元素内部作为默认文本。当从中文切换回英文时，i18n系统尝试更新这些元素，但由于更新逻辑只更新文本节点或span，而这些硬编码的英文文本被保留，导致显示混乱。

修复内容：
- 移除所有data-i18n元素内的硬编码英文文本
- 让i18n系统完全接管内容渲染
- 确保语言切换时，所有内容都从i18n字典读取

影响范围：
- 真实案例section（homeUseCase*）
- 四步流程section（homeWorkflow*）
- 常见问题section（homeQuickFaq*）

更新版本号到v=20251112强制刷新缓存

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -514,16 +514,11 @@
           style="margin: 60px 0; background: #0f1526; border-radius: 16px; padding: 40px"
         >
           <div class="section-header" style="text-align: center; color: #e9efff; margin-bottom: 32px">
-            <h2 style="font-size: 2em; margin-bottom: 12px" data-i18n="homeUseCaseTitle">
-              Case Study: From Prompt to Delivered Asset
-            </h2>
+            <h2 style="font-size: 2em; margin-bottom: 12px" data-i18n="homeUseCaseTitle"></h2>
             <p
               style="max-width: 680px; margin: 0 auto; line-height: 1.7; color: #c3ceff"
               data-i18n="homeUseCaseIntro"
-            >
-              See how our marketing team finished a product-launch visual in five minutes with AISTONE. We
-              document the prompt, variations, and iteration notes so you can replicate the quality.
-            </p>
+            ></p>
           </div>
 
           <div
@@ -534,23 +529,16 @@
               class="use-case-card"
               style="background: rgba(15, 21, 38, 0.6); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 12px; padding: 24px"
             >
-              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCasePromptTitle">
-                Core Prompt
-              </h3>
+              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCasePromptTitle"></h3>
               <pre
                 style="white-space: pre-wrap; background: #0b1324; color: #9ed0ff; padding: 16px; border-radius: 10px; font-size: 0.95em; line-height: 1.6"
               >"Futuristic product launch scene, neon blue lighting, premium wireless earbuds floating above a glass pedestal, cinematic depth, volumetric light, captured on 50mm lens"</pre>
-              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCasePromptDesc">
-                Highlights lighting, lens choice, and atmosphere to emphasise premium product texture. Add
-                your own bilingual note in the prefix if needed.
-              </p>
+              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCasePromptDesc"></p>
               <ul style="color: #c3ceff; font-size: 0.95em; line-height: 1.7; padding-left: 18px; margin-top: 16px">
-                <li data-i18n="homeUseCasePromptModel">Model: FLUX (High Quality)</li>
-                <li data-i18n="homeUseCasePromptSize">Resolution: 1024 × 1365 (portrait)</li>
-                <li data-i18n="homeUseCasePromptCount">Variations: 2 images for review</li>
-                <li data-i18n="homeUseCasePromptNegative">
-                  负面提示词：blurry, low contrast, watermark, extra hands
-                </li>
+                <li data-i18n="homeUseCasePromptModel"></li>
+                <li data-i18n="homeUseCasePromptSize"></li>
+                <li data-i18n="homeUseCasePromptCount"></li>
+                <li data-i18n="homeUseCasePromptNegative"></li>
               </ul>
             </div>
 
@@ -558,33 +546,17 @@
               class="use-case-card"
               style="background: rgba(15, 21, 38, 0.6); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 12px; padding: 24px"
             >
-              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCaseOutcomeTitle">
-                Outcome Overview
-              </h3>
-              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc1">
-                Image #1 met the brief but had blown highlights; Image #2 had better depth so we upscaled it
-                to 2048 × 2730 for the final asset.
-              </p>
-              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc2">
-                The final visual powered the homepage banner and lifted social ad CTR by 23% with no
-                photoshoot or retouching required.
-              </p>
+              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCaseOutcomeTitle"></h3>
+              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc1"></p>
+              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc2"></p>
               <div
                 style="margin-top: 18px; background: rgba(12, 18, 32, 0.9); border-radius: 10px; padding: 16px; color: #9ed0ff"
               >
-                <strong style="display: block; margin-bottom: 8px; color: #e9efff" data-i18n="homeUseCaseReuseTitle">
-                  Reuse Tips
-                </strong>
+                <strong style="display: block; margin-bottom: 8px; color: #e9efff" data-i18n="homeUseCaseReuseTitle"></strong>
                 <ul style="margin: 0; padding-left: 18px; color: #9ed0ff; line-height: 1.7">
-                  <li data-i18n="homeUseCaseReuse1">
-                    Swap product nouns and materials to adapt the prompt to new categories.
-                  </li>
-                  <li data-i18n="homeUseCaseReuse2">
-                    For video covers, switch aspect ratio to 16:9 while keeping the same lighting cues.
-                  </li>
-                  <li data-i18n="homeUseCaseReuse3">
-                    Pair with the voice module to script a 30-second narration for a full asset kit.
-                  </li>
+                  <li data-i18n="homeUseCaseReuse1"></li>
+                  <li data-i18n="homeUseCaseReuse2"></li>
+                  <li data-i18n="homeUseCaseReuse3"></li>
                 </ul>
               </div>
             </div>
@@ -594,15 +566,11 @@
         <!-- Workflow section aligned with structured data -->
         <section class="how-it-works" style="margin: 60px 0">
           <div class="section-header" style="text-align: center; margin-bottom: 32px">
-            <h2 style="font-size: 2em" id="workflow" data-i18n="homeWorkflowTitle">
-              Workflow to Produce Assets Consistently
-            </h2>
+            <h2 style="font-size: 2em" id="workflow" data-i18n="homeWorkflowTitle"></h2>
             <p
               style="max-width: 640px; margin: 12px auto 0; color: var(--color-surface-on-light-muted, #666); line-height: 1.7"
               data-i18n="homeWorkflowIntro"
-            >
-              Based on our internal best practices, these four steps help teams ship reliable AI visuals while reducing guesswork and revision cycles.
-            </p>
+            ></p>
           </div>
 
           <div
@@ -610,35 +578,27 @@
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 24px"
           >
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep1Label">Step 1</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep1Title">Clarify requirements</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep1Desc">
-                Map the delivery channel, aspect ratio, brand keywords, and reference palette. Store the essentials in prompt notes so the team stays aligned.
-              </p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep1Label"></span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep1Title"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep1Desc"></p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep2Label">Step 2</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep2Title">Pick model and parameters</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep2Desc">
-                Choose FLUX for premium output, Turbo for speed, or Kontext for image-to-image. Set aspect ratio, variation count, and negative prompts to match the channel.
-              </p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep2Label"></span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep2Title"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep2Desc"></p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep3Label">Step 3</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep3Title">Iterate prompts</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep3Desc">
-                Generate a draft, inspect composition and lighting, then adjust keywords. Use prompt history to compare versions and lock in the strongest option.
-              </p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep3Label"></span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep3Title"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep3Desc"></p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep4Label">Step 4</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep4Title">Export and add voice</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep4Desc">
-                Upscale and export the hero frame as PNG/JPG. Switch to the voice page to create narration with the same script for a full campaign package.
-              </p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep4Label"></span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep4Title"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep4Desc"></p>
             </div>
           </div>
         </section>
@@ -646,41 +606,27 @@
         <!-- Quick FAQ Section -->
         <section class="homepage-faq" style="margin: 60px 0">
           <div class="section-header" style="text-align: center; margin-bottom: 32px">
-            <h2 style="font-size: 2em" data-i18n="homeQuickFaqTitle">Quick FAQ</h2>
+            <h2 style="font-size: 2em" data-i18n="homeQuickFaqTitle"></h2>
             <p
               style="max-width: 620px; margin: 12px auto 0; color: var(--color-surface-on-light-muted, #666); line-height: 1.7"
               data-i18n="homeQuickFaqIntro"
-            >
-              Advertisers ask these three questions most often. Visit the full FAQ for more detail.
-            </p>
+            ></p>
           </div>
           <div
             class="faq-grid"
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px"
           >
             <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ1">
-                Is AISTONE completely free?
-              </h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA1">
-                Core features, including HD export and voice synthesis, are free for all visitors. Only enterprise deployments and branded API access require fees.
-              </p>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ1"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA1"></p>
             </div>
             <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ2">
-                Can I use generated assets commercially?
-              </h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA2">
-                Yes. You own the generated assets for campaigns and ads. Please follow platform disclosure rules for AI-generated media.
-              </p>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ2"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA2"></p>
             </div>
             <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ3">
-                How do I improve prompt accuracy?
-              </h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA3">
-                Combine clear subjects, lighting, camera specs, and style keywords. Use negative prompts to remove unwanted elements and follow the case study above for structure.
-              </p>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ3"></h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA3"></p>
             </div>
           </div>
         </section>
@@ -1830,16 +1776,16 @@
     </div>
 
     <!-- JavaScript files -->
-    <script src="js/i18n.js?v=20251111"></script>
-    <script src="js/api_client.js?v=20251111" defer></script>
-    <script src="js/modules/ui_utils.js?v=20251111" defer></script>
-    <script src="js/ui_handler.js?v=20251111" defer></script>
-    <script src="js/ui_enhancements.js?v=20251111" defer></script>
-    <script src="js/app.js?v=20251111" defer></script>
-    <script src="js/header.js?v=20251111" defer></script>
-    <script src="js/auth_modals.js?v=20251111" defer></script>
-    <script src="js/auth.js?v=20251111" defer></script>
-    <script src="js/cookie_consent.js?v=20251111" defer></script>
+    <script src="js/i18n.js?v=20251112"></script>
+    <script src="js/api_client.js?v=20251112" defer></script>
+    <script src="js/modules/ui_utils.js?v=20251112" defer></script>
+    <script src="js/ui_handler.js?v=20251112" defer></script>
+    <script src="js/ui_enhancements.js?v=20251112" defer></script>
+    <script src="js/app.js?v=20251112" defer></script>
+    <script src="js/header.js?v=20251112" defer></script>
+    <script src="js/auth_modals.js?v=20251112" defer></script>
+    <script src="js/auth.js?v=20251112" defer></script>
+    <script src="js/cookie_consent.js?v=20251112" defer></script>
 
     <!-- Page initialization -->
     <script>
