--- a/frontend/index.html
+++ b/frontend/index.html
@@ -514,11 +514,11 @@
           style="margin: 60px 0; background: #0f1526; border-radius: 16px; padding: 40px"
         >
           <div class="section-header" style="text-align: center; color: #e9efff; margin-bottom: 32px">
-            <h2 style="font-size: 2em; margin-bottom: 12px" data-i18n="homeUseCaseTitle"></h2>
+            <h2 style="font-size: 2em; margin-bottom: 12px" data-i18n="homeUseCaseTitle">Case Study: From Prompt to Delivered Asset</h2>
             <p
               style="max-width: 680px; margin: 0 auto; line-height: 1.7; color: #c3ceff"
               data-i18n="homeUseCaseIntro"
-            ></p>
+            >This walkthrough shows how a marketing team finished a launch visual in five minutes with AISTONE. We include the exact prompt, parameters, and iteration notes so you can replicate the quality.</p>
           </div>
 
           <div
@@ -529,16 +529,16 @@
               class="use-case-card"
               style="background: rgba(15, 21, 38, 0.6); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 12px; padding: 24px"
             >
-              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCasePromptTitle"></h3>
+              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCasePromptTitle">Core Prompt</h3>
               <pre
                 style="white-space: pre-wrap; background: #0b1324; color: #9ed0ff; padding: 16px; border-radius: 10px; font-size: 0.95em; line-height: 1.6"
               >"Futuristic product launch scene, neon blue lighting, premium wireless earbuds floating above a glass pedestal, cinematic depth, volumetric light, captured on 50mm lens"</pre>
-              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCasePromptDesc"></p>
+              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCasePromptDesc">We emphasise lighting, lens choice, and atmosphere to highlight the product texture. Add a Chinese prefix when collaborating in a bilingual workflow.</p>
               <ul style="color: #c3ceff; font-size: 0.95em; line-height: 1.7; padding-left: 18px; margin-top: 16px">
-                <li data-i18n="homeUseCasePromptModel"></li>
-                <li data-i18n="homeUseCasePromptSize"></li>
-                <li data-i18n="homeUseCasePromptCount"></li>
-                <li data-i18n="homeUseCasePromptNegative"></li>
+                <li data-i18n="homeUseCasePromptModel">Model: FLUX high-quality mode</li>
+                <li data-i18n="homeUseCasePromptSize">Resolution: 1024 × 1365 (portrait poster)</li>
+                <li data-i18n="homeUseCasePromptCount">Variations: 2 images for side-by-side review</li>
+                <li data-i18n="homeUseCasePromptNegative">Negative prompt: blurry, low contrast, watermark, extra hands</li>
               </ul>
             </div>
 
@@ -546,17 +546,17 @@
               class="use-case-card"
               style="background: rgba(15, 21, 38, 0.6); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 12px; padding: 24px"
             >
-              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCaseOutcomeTitle"></h3>
-              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc1"></p>
-              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc2"></p>
+              <h3 style="color: #e9efff; margin-bottom: 16px" data-i18n="homeUseCaseOutcomeTitle">Outcome Overview</h3>
+              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc1">Image #1 hit the brief but lighting was slightly blown out. Image #2 had better depth, so we upscaled it to 2048 × 2730 for the final export.</p>
+              <p style="color: #c3ceff; font-size: 0.95em; line-height: 1.7" data-i18n="homeUseCaseOutcomeDesc2">The final asset went live on the homepage banner and delivered a 23% lift in social ad CTR. No photoshoot or retouching was required.</p>
               <div
                 style="margin-top: 18px; background: rgba(12, 18, 32, 0.9); border-radius: 10px; padding: 16px; color: #9ed0ff"
               >
-                <strong style="display: block; margin-bottom: 8px; color: #e9efff" data-i18n="homeUseCaseReuseTitle"></strong>
+                <strong style="display: block; margin-bottom: 8px; color: #e9efff" data-i18n="homeUseCaseReuseTitle">Reuse Tips</strong>
                 <ul style="margin: 0; padding-left: 18px; color: #9ed0ff; line-height: 1.7">
-                  <li data-i18n="homeUseCaseReuse1"></li>
-                  <li data-i18n="homeUseCaseReuse2"></li>
-                  <li data-i18n="homeUseCaseReuse3"></li>
+                  <li data-i18n="homeUseCaseReuse1">Swap the product nouns and materials to adapt the prompt to new categories.</li>
+                  <li data-i18n="homeUseCaseReuse2">Switch the aspect ratio to 16:9 for video covers while keeping the same lighting cues.</li>
+                  <li data-i18n="homeUseCaseReuse3">Pair it with the voice module to script a 30-second narration for a complete asset kit.</li>
                 </ul>
               </div>
             </div>
@@ -566,11 +566,11 @@
         <!-- Workflow section aligned with structured data -->
         <section class="how-it-works" style="margin: 60px 0">
           <div class="section-header" style="text-align: center; margin-bottom: 32px">
-            <h2 style="font-size: 2em" id="workflow" data-i18n="homeWorkflowTitle"></h2>
+            <h2 style="font-size: 2em" id="workflow" data-i18n="homeWorkflowTitle">Workflow to Produce Assets Consistently</h2>
             <p
               style="max-width: 640px; margin: 12px auto 0; color: var(--color-surface-on-light-muted, #666); line-height: 1.7"
               data-i18n="homeWorkflowIntro"
-            ></p>
+            >Based on our internal best practices, these four steps help teams ship reliable AI visuals while reducing guesswork and revision cycles.</p>
           </div>
 
           <div
@@ -578,27 +578,27 @@
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 24px"
           >
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep1Label"></span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep1Title"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep1Desc"></p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep1Label">Step 1</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep1Title">Clarify requirements</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep1Desc">Log the target channel, aspect ratio, brand keywords, and references. Store them in the prompt notes so teammates stay aligned.</p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep2Label"></span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep2Title"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep2Desc"></p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep2Label">Step 2</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep2Title">Pick model and parameters</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep2Desc">Choose FLUX for polish, Turbo for speed, or Kontext for image-to-image. Set ratio, variation count, and negative prompts to match the channel.</p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep3Label"></span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep3Title"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep3Desc"></p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep3Label">Step 3</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep3Title">Iterate prompts</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep3Desc">Generate a draft, inspect composition and lighting, then tweak keywords. Compare prompt history to lock in the strongest version.</p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep4Label"></span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep4Title"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep4Desc"></p>
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep4Label">Step 4</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep4Title">Export and add voice</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep4Desc">Upscale the winning frame and export PNG or JPG. Switch to the voice page to create narration with the same script.</p>
             </div>
           </div>
         </section>
@@ -606,27 +606,27 @@
         <!-- Quick FAQ Section -->
         <section class="homepage-faq" style="margin: 60px 0">
           <div class="section-header" style="text-align: center; margin-bottom: 32px">
-            <h2 style="font-size: 2em" data-i18n="homeQuickFaqTitle"></h2>
+            <h2 style="font-size: 2em" data-i18n="homeQuickFaqTitle">Quick FAQ</h2>
             <p
               style="max-width: 620px; margin: 12px auto 0; color: var(--color-surface-on-light-muted, #666); line-height: 1.7"
               data-i18n="homeQuickFaqIntro"
-            ></p>
+            >Here are the three questions advertisers ask most often. Visit the full FAQ for extended guidance.</p>
           </div>
           <div
             class="faq-grid"
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px"
           >
             <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ1"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA1"></p>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ1">Is AISTONE completely free?</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA1">Core features, including HD export and voice synthesis, are free for all visitors. Enterprise deployments, brand customisation, and high-volume API usage are billed separately.</p>
             </div>
             <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ2"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA2"></p>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ2">Can I use generated assets commercially?</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA2">Yes. You own the assets for campaigns and ads. Please follow platform disclosure rules for AI-generated media.</p>
             </div>
             <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ3"></h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA3"></p>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ3">How do I improve prompt accuracy?</h3>
+              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA3">Combine subject, lighting, lens, and style keywords while using negative prompts to remove unwanted elements. The case study above breaks each part down.</p>
             </div>
           </div>
         </section>
@@ -1776,16 +1776,16 @@
     </div>
 
     <!-- JavaScript files -->
-    <script src="js/i18n.js?v=20251112"></script>
-    <script src="js/api_client.js?v=20251112" defer></script>
-    <script src="js/modules/ui_utils.js?v=20251112" defer></script>
-    <script src="js/ui_handler.js?v=20251112" defer></script>
-    <script src="js/ui_enhancements.js?v=20251112" defer></script>
-    <script src="js/app.js?v=20251112" defer></script>
-    <script src="js/header.js?v=20251112" defer></script>
-    <script src="js/auth_modals.js?v=20251112" defer></script>
-    <script src="js/auth.js?v=20251112" defer></script>
-    <script src="js/cookie_consent.js?v=20251112" defer></script>
+    <script src="js/i18n.js?v=20251113"></script>
+    <script src="js/api_client.js?v=20251113" defer></script>
+    <script src="js/modules/ui_utils.js?v=20251113" defer></script>
+    <script src="js/ui_handler.js?v=20251113" defer></script>
+    <script src="js/ui_enhancements.js?v=20251113" defer></script>
+    <script src="js/app.js?v=20251113" defer></script>
+    <script src="js/header.js?v=20251113" defer></script>
+    <script src="js/auth_modals.js?v=20251113" defer></script>
+    <script src="js/auth.js?v=20251113" defer></script>
+    <script src="js/cookie_consent.js?v=20251113" defer></script>
 
     <!-- Page initialization -->
     <script>
