fix: 修复Services页面显示HTML标签的问题
🐛 问题描述：
- Services页面内容显示了原始HTML标签和符号
- 原因：data-i18n属性会将HTML作为纯文本插入

✅ 解决方案：
- 移除静态HTML内容，改为动态加载
- 使用JavaScript的innerHTML动态插入翻译内容
- 添加语言切换监听，确保切换语言时内容正确更新

📝 技术细节：
- 创建loadServicesContent()函数动态加载内容
- 监听DOMContentLoaded和语言切换事件
- 使用t()函数获取翻译内容并通过innerHTML插入

🎯 效果：
- HTML标签正确渲染，不再显示原始代码
- 支持中英文切换
- 保持样式和格式完整

--- a/frontend/services.html
+++ b/frontend/services.html
@@ -55,26 +55,8 @@
       <main>
         <section class="services-section" id="services">
           <h1 data-i18n="servicesModalTitle">我们的服务</h1>
-          <div data-i18n="servicesModalContent" class="services-content">
-            <ul style="margin: 18px 0 18px 0; padding-left: 1.2em; line-height: 2; color: #aab4d4">
-              <li>
-                <b>AI图片生成：</b
-                >输入描述文本，智能生成高质量、多风格的图片，支持多种分辨率和比例选择。
-              </li>
-              <li>
-                <b>AI语音生成：</b
-                >输入文本，一键生成自然流畅的语音音频，适用于配音、播报等多种场景。
-              </li>
-              <li>
-                <b>智能提示词优化：</b
-                >内置AI优化和翻译功能，自动将您的描述转化为高质量英文提示词，提升生成效果。
-              </li>
-              <li><b>多语言支持：</b>支持中文和英文界面，满足全球用户需求。</li>
-              <li><b>永久免费：</b>所有功能对用户永久免费，无需注册，无使用次数限制。</li>
-            </ul>
-            <div style="margin-top: 12px; color: #aab4d4">
-              如需了解更多服务细节，欢迎通过"联系我们"与我们取得联系。
-            </div>
+          <div class="services-content" id="services-content-container">
+            <!-- 内容将通过JavaScript动态插入 -->
           </div>
         </section>
 
@@ -249,6 +231,24 @@
     <script src="js/auth_modals.js" defer></script>
     <div id="auth-modals"></div>
     <script>
+      // 动态加载服务内容
+      function loadServicesContent() {
+        const container = document.getElementById("services-content-container");
+        if (container && typeof t === "function") {
+          const content = t("servicesModalContent");
+          if (content) {
+            container.innerHTML = content;
+          }
+        }
+      }
+
+      // 页面加载完成后加载内容
+      if (document.readyState === "loading") {
+        document.addEventListener("DOMContentLoaded", loadServicesContent);
+      } else {
+        loadServicesContent();
+      }
+
       fetch("auth-modals.html")
         .then((response) => response.text())
         .then((html) => {
@@ -264,11 +264,21 @@
           ensureBind();
           if (typeof setLanguage === "function" && typeof getCurrentLang === "function") {
             setLanguage(getCurrentLang());
+            // 语言切换后重新加载服务内容
+            loadServicesContent();
           }
         })
         .catch((error) => {
           console.error("加载认证界面失败:", error);
         });
+
+      // 监听语言切换事件
+      const langSelect = document.getElementById("lang-select");
+      if (langSelect) {
+        langSelect.addEventListener("change", function () {
+          setTimeout(loadServicesContent, 100);
+        });
+      }
     </script>
   </body>
 </html>
